--- a/libs/books/feature/src/lib/reading-list/reading-list.component.html
+++ b/libs/books/feature/src/lib/reading-list/reading-list.component.html
@@ -1,26 +1,27 @@
 <ng-container *ngIf="(readingList$ | async).length > 0; else empty">
-  <div class="reading-list-item" *ngFor="let b of readingList$ | async">
+  <div class="reading-list-item" *ngFor="let item of readingList$ | async">
     <div>
-      <img class="reading-list-item--cover" [src]="b.coverUrl" />
+      <img class="reading-list-item--cover" [src]="item.coverUrl" alt="cover page of the book" />
     </div>
     <div class="reading-list-item--details">
-      <strong class="reading-list-item--details--title">{{ b.title }}</strong>
+      <strong class="reading-list-item--details--title">{{ item.title }}</strong>
       <div class="reading-list-item--details--author">
-        {{ b.authors.join(',') }}
+        {{ item.authors.join(',') }}
       </div>
     </div>
     <div>
       <button
         mat-icon-button
         color="warn"
-        [attr.aria-label]="'Remove ' + b.title + ' from reading list'"
-        (click)="removeFromReadingList(b)"
+        [attr.aria-label]="'Remove ' + item.title + ' from reading list'"
+        (click)="removeFromReadingList(item)"
+        aria-label="Remove from reading list"
       >
-        <mat-icon>remove_circle</mat-icon>
+        <mat-icon>{{readingListConstants.REMOVE_CIRCLE}}</mat-icon>
       </button>
     </div>
   </div>
 </ng-container>
 <ng-template #empty>
-  <p class="empty">You haven't added any books to your reading list yet.</p>
+  <p class="empty">{{readingListConstants.READING_LIST_EMPTY_TEXT}}</p>
 </ng-template>
