Task 3 : Undo Add and Remove from reading list

--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -36,6 +36,7 @@
               color="primary"
               (click)="addBookToReadingList(book)"
               [disabled]="book.isAdded"
+              data-testing="want-to-read-button"
             >
              {{booksConstants.WANT_TO_READ}}
             </button>
