Task 4 : Ability to mark a book as Finished

--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -36,8 +36,9 @@
               color="primary"
               (click)="addBookToReadingList(book)"
               [disabled]="book.isAdded"
+              data-testing="want-to-read-button"
             >
-             {{booksConstants.WANT_TO_READ}}
+            {{!book.finished ? booksConstants.WANT_TO_READ : booksConstants.FINISHED_TEXT}}
             </button>
           </div>
         </div>
