--- a/libs/shared/styles/src/lib/variables.scss
+++ b/libs/shared/styles/src/lib/variables.scss
@@ -20,3 +20,6 @@ $spacing-med: 2.5rem;
 $spacing-lg: 1.625rem;
 $spacing-xl: 5rem;
 $spacing-xxl: 7.5rem;
+$success-color: rgb(19, 226, 33);
+$error-color: #ff3333;
+$spacing-13xs: 0.8125rem;
