--- a/libs/books/feature/src/lib/reading-list/reading-list.component.scss
+++ b/libs/books/feature/src/lib/reading-list/reading-list.component.scss
@@ -13,6 +13,7 @@
   justify-content: center;
   margin-bottom: $spacing-xs;
   width: 100%;
+  margin-top: 0.625rem;
 
   > * {
     display: flex;
@@ -22,8 +23,8 @@
 }
 
 .reading-list-item--cover {
-  max-width: 36px;
-  max-height: 36px;
+  max-width: 2.25rem;
+  max-height: 2.25rem;
   margin-right: $spacing-xxs;
 }
 
@@ -44,4 +45,47 @@
   font-weight: 100;
   font-size: 1rem;
   color: $gray60;
+}
+
+.read-list-title-container {
+  flex-direction: row;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  align-self: baseline;
+  background: darkslategrey;
+  padding: 0.438rem;
+  color: $white;
+}
+
+.reading-list-container {
+  flex-direction: row !important;
+  align-items: center;
+  align-self: center;
+  align-content: center;
+}
+
+.check-box-button-custom {
+  margin-right: 0.25rem;
+  margin-top: 0.313rem;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+button.check-box-button-back {
+  color: $success-color;
+  background: $white;
+  cursor: help;
+}
+
+.finished-list {
+  margin-right: $spacing-13xs;
+}
+
+.date-col,
+.finished-list {
+  background: $success-color;
+  color: $white;
+  padding: 0.188rem;
+  cursor: pointer;
 }
